--- a/deploy/deploy-consumer-jobs.yaml
+++ b/deploy/deploy-consumer-jobs.yaml
@@ -26,8 +26,8 @@ spec:
     backoffLimit: 4
   pollingInterval: 10             # Optional. Default: 30 seconds
   maxReplicaCount: 30             # Optional. Default: 100
-  successfulJobsHistoryLimit: 3   # Optional. Default: 100. How many completed jobs should be kept.
-  failedJobsHistoryLimit: 2       # Optional. Default: 100. How many failed jobs should be kept.
+  successfulJobsHistoryLimit: 0   # Optional. Default: 100. How many completed jobs should be kept.
+  failedJobsHistoryLimit: 3       # Optional. Default: 100. How many failed jobs should be kept.
   scalingStrategy:
     strategy: "custom"                        # Optional. Default: default. Which Scaling Strategy to use.
     customScalingQueueLengthDeduction: 1      # Optional. A parameter to optimize custom ScalingStrategy.
@@ -48,6 +48,6 @@ metadata:
 spec:
   secretTargetRef:
     - parameter: host
-      name: rabbitmq-consumer-secret
+      name: rabbitmq-consumer
       key: RabbitMqHost
 ---
